--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mysql2": "^3.9.1",
     "nodemon": "^3.0.2",
     "uuid": "^9.0.1"
   }
