--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon index.js"
+    "start": "npx nodemon src/index.js",
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,12 @@
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.2",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
